--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -46,7 +46,7 @@
     transform: translate3d(100%, 0, 0);
 
     .portrait {
-      background: url('../dist/img/me-small.jpg');
+      background: url('../img/me-small.jpg');
       width: 150px;
       height: 150px;
     }
